# pat-match

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .ocamlformat  Makefile  README.md  asdf.smt2  dune  dune-project  fmt_lam.ml  gen.ml  helper.ml  helper.mli  input1.in  lia.smt2  lia2.why  lst.tex  main.ml  main2.ml  main_gadt.ml  main_guards.ml  main_inputs.ml  main_unnested.ml  mybench.ml  mybench.mli  mytester.ml  mytester_run.ml  mytester_run.t  pat-match.opam  pat-match.opam.locked  test.lsp  unn_pre.ml  work.ml2mk.ml  work_guards.ml2mk.ml  work_nonlinear.ml2mk.ml  work_unnested.ml  work_unnested.ml2mk.ml
.github/workflows/: Build_4.12.1.yml  FCPM.yml  aplas.yml  master.yml
.nonlinear/: dune
.unn/: .gitignore  algo_fair.ml  algo_fair2.ml  algo_fair3.ml  dune  impl1.ml  unn_pre.ml
GCW/: GCW_run.ml  dune
MK2022/: .gitignore  01intro.tex  02theory.tex  03matching.tex  03related.tex  05noCanren.tex  05tech.tex  06matching.tex  08related.tex  09conclusion.tex  10appendix.tex  Makefile  includes.tex  main.tex  references.bib
MK2022/talk/: Makefile  heading.tex  speech.txt  wildcards.tex
aez-demo/: aez_demo.ml  dune
alt-ergo-demo/: 1.ae  demo1.ml  demo2.ml  dune
asdf/: asdf.ml  dune
config/: discover.ml  dune
doc/: .gitignore  main1.tex
doc/EPTCS/: Makefile  evaluation.tex  pat-match.tex
gadt/: dune
guards/: dune  main_guards.ml
ifs/: dune  inputs.ml  main.ml  pre.ml  run.t  synth.ml
ifs/examples/: bool_pair.ml  dune  maranget.ml  mini_maranget.ml
ifs/lozovml/: dune  typs.ml
lorry/: dune  lorry_run.ml
mini/: .merlin  dune  mini.ml  minirun.ml
nonlinear/: dune  main_nonlinear.ml
old1/: dune  main2.ml
pp_ppx/: dune
smt_demo/: asdf.smt2  asdf_noninc.smt2  cvc_run_sygus.sh  for_vampire.smt2  run_cvc4.sh  synth1.smt2  synth2.smt2  synth3.smt2  synth4bool.smt2
solver-demo/: demos_list.ml  dune  solver_demo.ml
switch/: .ocamlformat  .ocamlformat-ignore  algo_fair.ml  algo_fair2.ml  algo_fair_manual.ml  algo_wildcard.ml  demo.ml  demo2.ml  demo3.ml  demo4bool.ml  demo5triplebool.ml  demo6.ml  demo7.ml  demo_unique.ml  dune  main.ml  main_inputs.ml  main_switch.ml  pats_tree.ml  run.t  run_cvc.ml  run_triple_bool.t  run_two_nil_lists.t  synth_log2.txt  synth_log3.txt  synth_log4.txt  tests.ml  unn_pre.ml  work.ml  work.ml2mk.ml  work2.ml2mk.ml  work_manual.ml  work_matchable_kind.ml  work_switch.ml2mk.ml
switch/lozovml/: .gitignore  .ocamlformat-ignore  dune  tests.ml  work.ml  work_base.ml
unn/: algo_fair.ml  algo_fair2.ml  algo_fair3.ml  dune  impl2.ml  main_inputs.ml  main_unnested.ml  synth_log1.txt  unn_pre.ml  work_unnested.ml2mk.ml
z3-demo/: dune  main.ml
