(env
 (dev
  (flags
   (-strict-sequence
    -short-paths
    -strict-formats
    -short-paths
    -keep-locs
    -w
    -3-9-32))))

(library
 (name helper)
 (modules helper)
 (preprocess
  (pps OCanren-ppx.ppx_distrib OCanren-ppx.ppx_fresh GT.ppx_all))
 (flags
  (:standard -rectypes))
 (libraries OCanren unix))

(library
 (name mytester)
 (modules mytester)
 (preprocess
  (pps OCanren-ppx.ppx_distrib OCanren-ppx.ppx_fresh GT.ppx_all))
 (flags
  (:standard -rectypes))
 (libraries mtime.clock.os OCanren))

(library
 (name mybench)
 (modules mybench)
 (preprocess
  (pps OCanren-ppx.ppx_distrib OCanren-ppx.ppx_fresh GT.ppx_all))
 (flags
  (:standard -rectypes))
 (libraries GT mtime.clock.os))

(rule
 (targets work.ml)
 (deps work.ml2mk.ml)
 (action
  (run noCanren work.ml2mk.ml -o %{targets})))
