(executable
  (name GCW_run)
  (modules GCW_run  GCW        )
  (flags (-rectypes))
  (libraries OCanren mytester)
  (preprocess (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx))
)

(rule
 (targets GCW.ml)
 (deps    GCW.ml2mk.ml)
 (action  (run noCanren -unnesting-mode -without-activate-tactics %{deps} -o %{targets})))
