(executable
  (name main_guards)
  (modules main_guards work_guards)
  (flags (-rectypes))
  (libraries OCanren OCanren.tester helper)
  (preprocess (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx))
)

(rule
  (targets work_guards.ml)
  (deps    work_guards.ml2mk.ml)
  (action  (run noCanren work_guards.ml2mk.ml -o %{targets}))
)
