(executable
  (name lorry_run)
  (modules lorry_run  lorry)
  (flags (-rectypes))
  (libraries OCanren mytester helper)
  (preprocess (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx))
)

(rule
 (targets lorry.ml)
 (deps    lorry.ml2mk.ml)
 (action  (run noCanren -unnesting-mode -without-activate-tactics %{deps} -o %{targets})))
