(rule
 (targets work_nonlinear.ml)
 (deps work_nonlinear.ml2mk.ml)
 (action
  (run
   noCanren
   -unnesting-mode
   -without-activate-tactics
   %{deps}
   -o
   %{targets})))

(executable
 (name main_nonlinear)
 (modules main_nonlinear work_nonlinear)
 (flags (-rectypes))
 (libraries OCanren OCanren.tester helper)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx_all)))
