(executable
 (name main)
 (modules main)
 (flags (-rectypes))
 (libraries ocanren)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx)))

(executable
 (name main2)
 (modules main2 work)
 (flags (-rectypes))
 (libraries OCanren OCanren.tester helper)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx)))
