(env
 (dev
  (flags
   (:standard -rectypes -warn-error +20+5 -w -33-37-26)))
 (release
  (flags
   (:standard -rectypes -warn-error +20+5))))

(library
 (name switches)
 (modules
  main_inputs
  unn_pre
  pats_tree
  algo_fair
  work_manual
  work_matchable_kind
  algo_fair_manual
  algo_wildcard
  run_cvc)
 (wrapped false)
 (libraries
  lazy-trie
  work_base_common
  work_ho
  work_unn
  OCanren
  OCanren.tester
  helper
  mytester
  mybench)
 (preprocess
  (pps
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all
   ppx_optcomp)))

(executable
 (name main)
 (modules main)
 (libraries switches)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx_all ppx_optcomp)))

(executables
 (names demo demo_unique)
 (modules demo demo_unique)
 (libraries switches OCanren.tester)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_tester
   GT.ppx_all
   ppx_optcomp)))

(executable
 (name demo3)
 (modules demo3)
 (libraries switches OCanren.tester)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_tester
   GT.ppx_all
   ppx_optcomp)))
